--- a/index.html
+++ b/index.html
@@ -68,10 +68,6 @@ https://www.tooplate.com/view/2127-little-fashion
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="products.html">Products</a>
-                            </li>
-
-                            <li class="nav-item">
                                 <a class="nav-link" href="faq.html">FAQs</a>
                             </li>
 
@@ -97,9 +93,14 @@ https://www.tooplate.com/view/2127-little-fashion
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6 col-10">
-                                    <h1 class="slick-title">Cool Fashion</h1>
+                                    <h1 class="slick-title">Matchmaking and Relationship Compatibility</h1>
 
-                                    <p class="lead text-white mt-lg-3 mb-lg-5">Little fashion template comes with total 8 HTML pages provided by Tooplate website.</p>
+                                    <p class="lead text-white mt-lg-3 mb-lg-5">This involves comparing the birth charts of two individuals to assess their compatibility.
+
+ Astrologers look for harmonious or challenging aspects between the planets in each chart.
+                                    It's used to gain insights into potential relationship dynamics, strengths, and weaknesses.
+
+</p>
 
                                     <a href="about.html" class="btn custom-btn">Learn more about us</a>
                                 </div>
