--- a/faq.html
+++ b/faq.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Tooplate's Little Fashion - FAQs Page</title>
+        <title>My Astrology - FAQs Page</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -69,10 +69,6 @@ https://www.tooplate.com/view/2127-little-fashion
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="products.html">Products</a>
-                            </li>
-
-                            <li class="nav-item">
                                 <a class="nav-link active" href="faq.html">FAQs</a>
                             </li>
 
@@ -80,11 +76,6 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                         </ul>
-
-                        <div class="d-none d-lg-block">
-                            <a href="sign-in.html" class="bi-person custom-icon me-3"></a>
-
-                            <a href="product-detail.html" class="bi-bag custom-icon"></a>
                         </div>
                     </div>
                 </div>
@@ -115,14 +106,14 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="accordion-item">
                                     <h2 class="accordion-header" id="headingOne">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordionGeneralOne" aria-expanded="true" aria-controls="accordionGeneralOne">
-                                        What is this Little Fashion?
+                                        What are the different services we provide?
                                         </button>
                                     </h2>
 
                                     <div id="accordionGeneralOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionGeneral">
 
                                         <div class="accordion-body">
-                                            <p class="large-paragraph"><strong>Little Fashion</strong> is free Bootstrap 5 website template for everyone. There are 8 HTML pages included in this template and you can expand more pages as you need.</p>
+                                            <p class="large-paragraph">Matchmaking, Birth Chart Analasys, Forecasting</p>
 
                                             <p class="large-paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                                         </div>
@@ -132,14 +123,14 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="accordion-item">
                                     <h2 class="accordion-header" id="headingTwo">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordionGeneralTwo" aria-expanded="false" aria-controls="accordionGeneralTwo">
-                                        What is Tooplate website?
+                                        How can we get the one or more of the above mentioned services?
                                         </button>
                                     </h2>
 
                                     <div id="accordionGeneralTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionGeneral">
 
                                         <div class="accordion-body">
-                                            <p class="large-paragraph"><a href="https://www.tooplate.com/free-templates" target="_blank">Tooplate</a> is a great website to download free HTML website templates for your business or personal use. Tooplate website has been online for almost 8 years now. Thank you for visiting our website.</p>
+                                            <p class="large-paragraph">You could write us an e-mail or whatsapp with the detailes like services you would like to get, online meet timings and relevant astrology details</p>
                                         </div>
                                     </div>
                                 </div>
@@ -147,51 +138,14 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="accordion-item">
                                     <h2 class="accordion-header" id="headingThree">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordionGeneralThree" aria-expanded="false" aria-controls="accordionGeneralThree">
-                                        How do I support your website?
+                                        How does the payment works?
                                         </button>
                                     </h2>
 
                                     <div id="accordionGeneralThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionGeneral">
 
                                         <div class="accordion-body">
-                                            <p class="large-paragraph">You can support our Tooplate website by sharing it to your friends or colleagues on the web or social media.</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                            <h2 class="mt-5">About <span>our products</span></h2>
-
-                            <div class="accordion" id="accordionProduct">
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header" id="headingFour">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordionProductOne" aria-expanded="true" aria-controls="accordionProductOne">
-                                        What is Fashion Design?
-                                        </button>
-                                    </h2>
-
-                                    <div id="accordionProductOne" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionProduct">
-
-                                        <div class="accordion-body">
-                                            <p class="large-paragraph"><strong>Lorem ipsum dolor</strong> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-
-                                            <p class="large-paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header" id="headingFive">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordionProductTwo" aria-expanded="false" aria-controls="accordionProductTwo">
-                                        How do I use the product?
-                                        </button>
-                                    </h2>
-
-                                    <div id="accordionProductTwo" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionProduct">
-
-                                        <div class="accordion-body">
-                                            <p class="large-paragraph">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                                            <p class="large-paragraph">You can call or whatsapp to book the appointment with 50% of advance and pay the remaining amount after the service through Gpay.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -211,10 +165,7 @@ https://www.tooplate.com/view/2127-little-fashion
                 <div class="row">
 
                     <div class="col-lg-3 col-10 me-auto mb-4">
-                        <h4 class="text-white mb-3"><a href="index.html">Little</a> Fashion</h4>
-                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2022 <strong>Little Fashion</strong></p>
-                        <br>
-                        <p class="copyright-text">Designed by <a href="https://www.tooplate.com/" target="_blank">Tooplate</a></p>
+                        <h4 class="text-white mb-3"><a href="index.html">My</a> Astrology</h4>
                     </div>
 
                     <div class="col-lg-5 col-8">
@@ -222,10 +173,6 @@ https://www.tooplate.com/view/2127-little-fashion
 
                         <ul class="footer-menu d-flex flex-wrap">
                             <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">Story</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Products</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Privacy policy</a></li>
 
                             <li class="footer-menu-item"><a href="#" class="footer-menu-link">FAQs</a></li>
 
