--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Tooplate's Little Fashion - Contact Page</title>
+        <title>My Astrology - Contact Page</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,7 +49,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                        <strong><span>Little</span> Fashion</strong>
+                        <strong><span>My</span> Astrology</strong>
                     </a>
 
                     <div class="d-lg-none">
@@ -66,10 +66,6 @@ https://www.tooplate.com/view/2127-little-fashion
 
                             <li class="nav-item">
                                 <a class="nav-link" href="about.html">Story</a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link" href="products.html">Products</a>
                             </li>
 
                             <li class="nav-item">
@@ -136,7 +132,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="form-floating mb-4">
                                     <textarea id="message" name="message" class="form-control" placeholder="Leave a comment here" required style="height: 160px"></textarea>
 
-                                    <label for="message">Tell us about the project</label>
+                                    <label for="message">Please fill in the detail</label>
                                 </div>
 
                                 <div class="col-lg-5 col-6">
@@ -148,10 +144,10 @@ https://www.tooplate.com/view/2127-little-fashion
                         <div class="col-lg-6 col-12 mt-5 ms-auto">
                             <div class="row">
                                 <div class="col-6 border-end contact-info">
-                                    <h6 class="mb-3">New Business</h6>
+                                    <h6 class="mb-3">Shri Maruthamalayan Jothida Nilayam</h6>
 
                                     <a href="mailto:hello@company.com" class="custom-link">
-                                        hello@company.com
+                                        athisayaraajan.a@gmail.com
                                         <i class="bi-arrow-right ms-2"></i>
                                     </a>
                                 </div>
@@ -168,7 +164,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="col-6 border-top border-end contact-info">
                                     <h6 class="mb-3">Our Office</h6>
 
-                                    <p class="text-muted">Akershusstranda 20, 0150 Oslo, Norway</p>
+                                    <p class="text-muted">481/A, Visalakshi Nagar, Sivakasi</p>
                                 </div>
 
                                 <div class="col-6 border-top contact-info">
@@ -198,10 +194,7 @@ https://www.tooplate.com/view/2127-little-fashion
                 <div class="row">
 
                     <div class="col-lg-3 col-10 me-auto mb-4">
-                        <h4 class="text-white mb-3"><a href="index.html">Little</a> Fashion</h4>
-                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2022 <strong>Little Fashion</strong></p>
-                        <br>
-                        <p class="copyright-text">Designed by <a href="https://www.tooplate.com/" target="_blank">Tooplate</a></p>
+                        <h4 class="text-white mb-3"><a href="index.html">My</a> Astrology</h4>
                     </div>
 
                     <div class="col-lg-5 col-8">
@@ -209,10 +202,6 @@ https://www.tooplate.com/view/2127-little-fashion
 
                         <ul class="footer-menu d-flex flex-wrap">
                             <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">Story</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Products</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Privacy policy</a></li>
 
                             <li class="footer-menu-item"><a href="#" class="footer-menu-link">FAQs</a></li>
 
