--- a/about.html
+++ b/about.html
@@ -70,12 +70,6 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                         </ul>
-
-                        <div class="d-none d-lg-block">
-                            <a href="sign-in.html" class="bi-person custom-icon me-3"></a>
-
-                            <a href="product-detail.html" class="bi-bag custom-icon"></a>
-                        </div>
                     </div>
                 </div>
             </nav>
@@ -86,8 +80,8 @@ https://www.tooplate.com/view/2127-little-fashion
 
                         <div class="col-lg-6 col-12 header-info">
                             <h1>
-                                <span class="d-block text-primary">Company</span>
-                                <span class="d-block text-dark">Fashion</span>
+                                <span class="d-block text-primary">Business</span>
+                                <span class="d-block text-dark">Card</span>
                             </h1>
                         </div>
                     </div>
