--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     </div>
                 </div>
 
-                <img src="images/header/businesspeople-meeting-office-working.jpg" class="header-image img-fluid" alt="">
+                <img src="images/Business_Card.jpg" class="header-image img-fluid" alt="">
             </header>
 
             <section class="team section-padding">
@@ -95,7 +95,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     <div class="row">
 
                         <div class="col-12">
-                            <h2 class="mb-5">Meet our <span>team</span></h2>
+                            <h2 class="mb-5">My <span>Profile</span></h2>
                         </div>
 
                         <div class="col-lg-4 mb-4 col-12">
@@ -103,8 +103,8 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <img src="images/people/senior-man-wearing-white-face-mask-covid-19-campaign-with-design-space.jpeg" class="img-fluid custom-circle-image team-image me-4" alt="">
 
                                 <div class="team-info">
-                                    <h5 class="mb-0">Don</h5>
-                                    <strong class="text-muted">Product, VP</strong>
+                                    <h5 class="mb-0">A.Athisayarajan</h5>
+                                    <strong class="text-muted">Astrologer, D.Astro</strong>
 
                                     <!-- Button trigger modal -->
                                     <button type="button" class="btn custom-modal-btn" data-bs-toggle="modal" data-bs-target="#don">
@@ -114,39 +114,6 @@ https://www.tooplate.com/view/2127-little-fashion
                                 </div>
                             </div>
                         </div>
-
-                        <div class="col-lg-4 mb-4 col-12">
-                            <div class="team-thumb d-flex align-items-center">
-                                <img src="images/people/portrait-british-woman.jpeg" class="img-fluid custom-circle-image team-image me-4" alt="">
-
-                                <div class="team-info">
-                                    <h5 class="mb-0">Kelly</h5>
-                                    <strong class="text-muted">Marketing</strong>
-
-                                    <!-- Button trigger modal -->
-                                    <button type="button" class="btn custom-modal-btn" data-bs-toggle="modal" data-bs-target="#kelly">
-                                      <i class="bi-plus-circle-fill"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 mb-lg-0 mb-4 col-12">
-                            <div class="team-thumb d-flex align-items-center">
-                                <img src="images/people/beautiful-woman-face-portrait-brown-background.jpeg" class="img-fluid custom-circle-image team-image me-4" alt="">
-
-                                <div class="team-info">
-                                    <h5 class="mb-0">Marie</h5>
-                                    <strong class="text-muted">Founder</strong>
-
-                                    <!-- Button trigger modal -->
-                                    <button type="button" class="btn custom-modal-btn" data-bs-toggle="modal" data-bs-target="#marie">
-                                      <i class="bi-plus-circle-fill"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-
                     </div>
                 </div>
             </section>
