--- a/about.html
+++ b/about.html
@@ -123,46 +123,46 @@ https://www.tooplate.com/view/2127-little-fashion
                     <div class="row">
 
                         <div class="col-lg-9 mx-auto col-11">
-                            <h2 class="text-center">Customer love, <br> <span>Little</span> Fashion</h2>
+                            <h2 class="text-center">Customer love, <br> <span>My</span> Astrology</h2>
 
                             <div class="slick-testimonial">
                                 <div class="slick-testimonial-caption">
-                                    <p class="lead">Over three years in business, We’ve had the chance to work on a variety of projects, with companies Lorem ipsum dolor sit amet</p>
+                                    <p class="lead">Athisayarajan made us clear that Astrology is a prediction with a traditional scientific approach. The clarity he gave helped us to build hope and come out of the difficult times.</p>
 
                                     <div class="slick-testimonial-client d-flex align-items-center mt-4">
                                         <img src="images/people/senior-man-wearing-white-face-mask-covid-19-campaign-with-design-space.jpeg" class="img-fluid custom-circle-image me-3" alt="">
 
-                                        <span>George, <strong class="text-muted">Digital Art Fashion</strong></span>
+                                        <span>Kalai, <strong class="text-muted">Virudhunagar</strong></span>
                                     </div>
                                 </div>
 
                                 <div class="slick-testimonial-caption">
-                                    <p class="lead">Over three years in business, We’ve had the chance to work on a variety of projects, with companies Lorem ipsum dolor sit amet</p>
+                                    <p class="lead">My Astrology helped us to review lot of matchmaking compatibility with ease by sitting from home. Thanks to Athisayarajan a lot!</p>
 
                                     <div class="slick-testimonial-client d-flex align-items-center mt-4">
                                         <img src="images/people/beautiful-woman-face-portrait-brown-background.jpeg" class="img-fluid custom-circle-image me-3" alt="">
 
-                                        <span>Sandar, <strong class="text-muted">Zoom Fashion Idea</strong></span>
+                                        <span>Sundar, <strong class="text-muted">Tirunelveli</strong></span>
                                     </div>
                                 </div>
 
                                 <div class="slick-testimonial-caption">
-                                    <p class="lead">Over three years in business, We’ve had the chance to work on a variety of projects, with companies Lorem ipsum dolor sit amet</p>
+                                    <p class="lead">Athisyarajan has kept things simple and a very honest person. He guided us in the right direction.</p>
 
                                     <div class="slick-testimonial-client d-flex align-items-center mt-4">
                                         <img src="images/people/portrait-british-woman.jpeg" class="img-fluid custom-circle-image me-3" alt="">
 
-                                        <span>Marie, <strong class="text-muted">Art Fashion Design</strong></span>
+                                        <span>Kayal, <strong class="text-muted">Erode</strong></span>
                                     </div>
                                 </div>
 
                                 <div class="slick-testimonial-caption">
-                                    <p class="lead">Over three years in business, We’ve had the chance to work on a variety of projects, with companies Lorem ipsum dolor sit amet</p>
+                                    <p class="lead">I have been benefited from My Astrology services for quite sometime with my business decisions to naming my kids. They never get us into rabbit hole. We can trust them 100%.</p>
 
                                     <div class="slick-testimonial-client d-flex align-items-center mt-4">
                                         <img src="images/people/woman-wearing-mask-face-closeup-covid-19-green-background.jpeg" class="img-fluid custom-circle-image me-3" alt="">
 
-                                        <span>Catherine, <strong class="text-muted">Dress Fashion</strong></span>
+                                        <span>Murugan, <strong class="text-muted">Trichy</strong></span>
                                     </div>
                                 </div>
                             </div>
@@ -179,10 +179,7 @@ https://www.tooplate.com/view/2127-little-fashion
                 <div class="row">
 
                     <div class="col-lg-3 col-10 me-auto mb-4">
-                        <h4 class="text-white mb-3"><a href="index.html">Little</a> Fashion</h4>
-                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2022 <strong>Little Fashion</strong></p>
-                        <br>
-                        <p class="copyright-text">Designed by <a href="https://www.tooplate.com/" target="_blank">Tooplate</a></p>
+                        <h4 class="text-white mb-3"><a href="index.html">My</a> Astrology</h4>
                     </div>
 
                     <div class="col-lg-5 col-8">
@@ -190,10 +187,6 @@ https://www.tooplate.com/view/2127-little-fashion
 
                         <ul class="footer-menu d-flex flex-wrap">
                             <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">About</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Products</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Privacy policy</a></li>
 
                             <li class="footer-menu-item"><a href="#" class="footer-menu-link">FAQs</a></li>
 
