--- a/contact.html
+++ b/contact.html
@@ -216,7 +216,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
                             <li><a href="#" class="social-icon-link bi-youtube"></a></li>
 
-                            <li><a href="#" class="social-icon-link bi-whatsapp"></a></li>
+                             <li><a href="https://wa.me/917338954658?text=Hello,%20I%20have%20a%20question%20about%20astrology." class="social-icon-link bi-whatsapp"></a></li>
 
                             <li><a href="#" class="social-icon-link bi-instagram"></a></li>
 
